namespace Control;

public class GestorFichajes
{
    
}