namespace ActividadClaseU5AulaII;

public interface IEntrevistable
{
    void RealizarDeclaraciones();
}