namespace ActividadClaseU5AulaII;

public class PerfilEstad
{
    public int PartidasGana { get; set; }
    public int PartidasPerd { get; set; }

    public PerfilEstad()
    {
        PartidasGana = 0;
        PartidasPerd = 0;
    }
}