namespace Frontera;

public class PantallaRegistro
{
    
}